# Insurance-Broker-Ai-Agent

./: .gitignore  README.md  start-windows.ps1  start.sh  tsconfig.tsbuildinfo
rag-backend/: .env.example  README.md  WORK_GUIDE.md  pyproject.toml
rag-backend/app/: config.py  dependencies.py  domain.py  errors.py  main.py  model_api.py
rag-backend/app/agent_runtime/: behavior.md  capability.answers.yaml  identity.md  permissions.command.yaml  skills.index.yaml  system_policy.yaml  tools.core.yaml  tools.plugins.index.yaml
rag-backend/app/agents/: agent_turn_runtime.py  research_graph.py
rag-backend/app/prompts/: prompts.default.yaml
rag-backend/app/retrieval/: bm25_indexer.py
rag-backend/scripts/: download_models.py  milvus_shadow_spike.py  precompute_embeddings.py  run_eval.py
rag-backend/tests/: test_admin_page.py  test_agent_runtime.py  test_agent_tools.py  test_agent_turn_runtime.py  test_agent_turn_runtime_stream.py  test_api_routes.py  test_app_lifespan.py  test_bm25_indexer.py  test_calculation_flow.py  test_chroma_vector_store.py  test_command_permissions.py  test_config.py  test_conversation_memory.py  test_dual_chunking.py  test_embedding_dependencies.py  test_eval.py  test_evidence_source_registry.py  test_intent_classifier.py  test_local_embedding_provider.py  test_milvus_store.py  test_parsers_and_chunker.py  test_prompt_registry.py  test_queue_adapter.py  test_rag_query_service.py  test_research_graph.py  test_retrieval_planner.py  test_sentence_transformers_embedding_provider.py  test_services.py  test_sqlite_repository.py  test_worker.py
(+228 files in other folders)
