[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI RAG ingestion backend for ChromaDB"
requires-python = ">=3.11"
dependencies = [
  "chromadb",
  "fastapi",
  "httpx",
  "jieba",
  "jinja2",
  "langgraph",
  "pydantic-settings",
  "pypdf",
  "PyMuPDF",
  "PyYAML",
  "python-multipart",
  "rank_bm25",
  "redis",
  "rq",
  "uvicorn[standard]"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-httpx"
]
local-embeddings = [
  "sentence-transformers"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
